# quicksocks

./: Cargo.toml  ca_cert.pem  ca_key.pem  cert.pem  gen_cert.sh  identity.pfx  key.pem  lel.rs
src/: connection.rs  frame.rs  lib.rs  main.rs  message.rs  websocket.rs
src/streams/: mod.rs  ssl.rs  tcp.rs
